@@ -21,6 +21,7 @@ libos_la_SOURCES = 	\
 	io.c		\
 	mitauth.c	\
 	oscolor.c	\
+	oscolor.h	\
 	osdep.h		\
 	osinit.c	\
 	utils.c		\
